[package]
name = "python-alias"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/naughie/python-alias"

[[bin]]
name = "python3"
path = "src/main.rs"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = "z"
overflow-checks = false
panic = "abort"
split-debuginfo = "off"
strip = "symbols"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
